; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopdm.c_m68k_op_move_16_frc_di.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopdm.c_m68k_op_move_16_frc_di.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CPU_TYPE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @m68k_op_move_16_frc_di() #0 {
  %1 = load i32, i32* @CPU_TYPE, align 4
  %2 = call i64 @CPU_TYPE_IS_010_PLUS(i32 %1)
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %8

4:                                                ; preds = %0
  %5 = call i32 (...) @EA_AY_DI_16()
  %6 = call i32 (...) @m68ki_get_ccr()
  %7 = call i32 @m68ki_write_16(i32 %5, i32 %6)
  br label %10

8:                                                ; preds = %0
  %9 = call i32 (...) @m68ki_exception_illegal()
  br label %10

10:                                               ; preds = %8, %4
  ret void
}

declare dso_local i64 @CPU_TYPE_IS_010_PLUS(i32) #1

declare dso_local i32 @m68ki_write_16(i32, i32) #1

declare dso_local i32 @EA_AY_DI_16(...) #1

declare dso_local i32 @m68ki_get_ccr(...) #1

declare dso_local i32 @m68ki_exception_illegal(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
